# squat-plan

./: LICENSE  README.md  example.py  pyproject.toml  run.py  sphere_example.py  squat.rviz
src/: config.py  curve_fitter.py  dynamics.py  forester.py  main.py  plotter.py  quaternion.py  sphere_example_rviz.py  squat.rviz  traj_eval.py  trajopt.py  trajopt_linear.py  viz.py  viz_rviz.py  viz_vpython.py
src/squatplan/: main.py  obstacle.py  plotter.py  sphere_example_rviz.py  trajopt.py  utils.py
