[project]
name = "squat-plan"
version = "1.0.0"
description = "Smooth Quadrotor Agile Trajectory Planning using GEKKO and ROS visualization"
authors = [
  { name = "Aaron John Sabu", email = "aaronjs@ucla.edu" },
  { name = "Ryan Nemiroff", email = "ryguyn@ucla.edu" },
  { name = "Brett T. Lopez", email = "btlopez@ucla.edu" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "numpy",
  "matplotlib",
  "gekko",
]

[project.optional-dependencies]
dev = ["black"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["squatplan"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"